--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 <h2>MY Information</h2>
 <br>
 <div>
-
+<img
+width="200
+height="200
+src="Images/image1-IP.jpg" alt="">
+<br>
+<div>
     
 </body>
 </html>
