--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@ height="200
 src="Images/image1-IP.jpg" alt="">
 <br>
 <div>
-    
+ <h2>My Projects</h2> 
+ <ul>
+    <li> <a href="https://github.com/AMANIKAI/hello-world.git" target="_blank" <Hello-world/a>
+    <p>This is my first project as a developer</p>
+ </ul>  
 </body>
 </html>
