--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@ src="Images/image1-IP.jpg" alt="">
 <div>
  <h2>My Projects</h2> 
  <ul>
-    <li><a href="https://github.com/AMANIKAI/hello-world.git" target="_blank"></a><Hello-world<a></a>
+    <li><a href="https://github.com/AMANIKAI/hello-world.git" target="_blank">Hello-world<a></a>
     <p>This is my first project as a developer</p>
+    <li> <a href="https://github.com/AMANIKAI/Amaniweb.git" target="_blank">Amaniweb</a>
+    <p>This is my personal website</p>
  </ul>  
 </body>
 </html>
