--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1>THIS IS MY INFORMATION-AMANI KAI MWASAMBU</h1>
 <br>
 <div>
-<h2>MY Information</h2>
+<h2>My Information</h2>
 <br>
 <div>
 <img
@@ -26,6 +26,8 @@ src="Images/image1-IP.jpg" alt="">
     <p>This is my first project as a developer</p>
     <li> <a href="https://github.com/AMANIKAI/Amaniweb.git" target="_blank">Amaniweb</a>
     <p>This is my personal website</p>
+    <li> <a href="https://github.com/AMANIKAI/KAIWEB.git" target="_blank">KAIWEB</a>
+    <p>MThis gives a detailed presentation of my projects</p>
  </ul>  
 </body>
 </html>
