removed some texts

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<h1>THIS IS MY INFORMATION-AMANI KAI MWASAMBU</h1>
+<h1>THIS IS MY INFORMATION-AMANI</h1>
 <br>
 <div>
 <h2>My Information</h2>
@@ -27,7 +27,7 @@ src="Images/image1-IP.jpg" alt="">
     <li> <a href="https://github.com/AMANIKAI/Amaniweb.git" target="_blank">Amaniweb</a>
     <p>This is my personal website</p>
     <li> <a href="https://github.com/AMANIKAI/KAIWEB.git" target="_blank">KAIWEB</a>
-    <p>MThis gives a detailed presentation of my projects</p>
+    <p>This gives a detailed presentation of my projects</p>
  </ul>  
 </body>
 </html>
