--- a/index.html
+++ b/index.html
@@ -29,5 +29,16 @@ src="Images/image1-IP.jpg" alt="">
     <li> <a href="https://github.com/AMANIKAI/KAIWEB.git" target="_blank">KAIWEB</a>
     <p>This gives a detailed presentation of my projects</p>
  </ul>  
+ <br>
+ <h3>My Background</h3>
+ <p>My name is Amani Kai. I am from Kilifi</p>
+ <p>I like travelling and adventur</p>
+ <b></b>
+ <h3>Below are the places I have visited so far</h3>
+ <ol>
+    <li>Mt. Longonot</li>
+    <li>Mt. Kilimanjaro</li>
+    <li>Lake Turkana</li>
+ </ol>
 </body>
 </html>
