added contact us

--- a/index.html
+++ b/index.html
@@ -40,5 +40,11 @@ src="Images/image1-IP.jpg" alt="">
     <li>Mt. Kilimanjaro</li>
     <li>Lake Turkana</li>
  </ol>
+ <b></b>
+ <h3>Contact Us</h3>
+ <ul>
+    <li>Mobile: +254 713 989 740</li>
+    <li>Email: akai@safaricom.co.ke</li>
+ </ul>
 </body>
 </html>
