added more info on p1

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ src="Images/image1-IP.jpg" alt="">
  </ul>  
  <br>
  <h3>My Background</h3>
- <p>My name is Amani Kai. I am from Kilifi</p>
+ <p>My name is Amani Kai. I am from Kilifi. I am 41years old. I started my education at Katikirieni primary school in Kilifi south, joined St. George's High school in Kaloleni Giriama where I completed my KCSE. I persued a Diploma course at the then Mombasa Polytechnic which is the present Technical University of Mombasa and later persued a Bachelor of Commerce, Finance at MKU.</p>
  <p>I like travelling and adventur</p>
  <b></b>
  <h3>Below are the places I have visited so far</h3>
