--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@ src="Images/image1-IP.jpg" alt="">
  <br>
  <h3>My Background</h3>
  <p>My name is Amani Kai. I am from Kilifi. I am 41years old. I started my education at Katikirieni primary school in Kilifi south, joined St. George's High school in Kaloleni Giriama where I completed my KCSE. I persued a Diploma course at the then Mombasa Polytechnic which is the present Technical University of Mombasa and later persued a Bachelor of Commerce, Finance at MKU.</p>
- <p>I like travelling and adventur</p>
+ <p>I like travelling and adventure</p>
+ <p>I was first employed at Uchumi Supermarkets as a sales agent for Carpers and floor mats section, later at KenCall BPO Limited as a Customer care agent and in January 2012 I joined Safaricom Jambo Contact Center as a Customer Experience Executive. I moved later from Call Center to Retail where I am currently at Burburu Retail Shop. </p>
  <b></b>
  <h3>Below are the places I have visited so far</h3>
  <ol>
