--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ src="Images/image1-IP.jpg" alt="">
     <li>Email: akai@safaricom.co.ke</li>
     <li>Facebook.com/amanikai</li>
     <li>amanikai@gmail.com</li>
+
+<h3>(c) 2022 Amani Kai</h3>
  </ul>
 </body>
 </html>
