--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ src="Images/image1-IP.jpg" alt="">
     <li>Facebook.com/amanikai</li>
     <li>amanikai@gmail.com</li>
 
-<h3>(c) 2022 Amani Kai</h3>
+<h3> © 2022 Amani Kai</h3>
  </ul>
 </body>
 </html>
